2008-03-12  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/core/compat.py: Add few functions to make Chimera
	2.4 compatible (any, all are only defined on Py2.5)

	* src/chimera/core/threads.py: Remove auto-locking support as this
	is handled in MetaObject level now (see below).

	* src/chimera/core/classloader.py: Improved and cleaned expection
	raising (no need to hack with sys.exc_info, thanks to log.py
	work).

	* src/chimera/core/callback.py: Fix documentation and PEP-8 80
	column limit where reasonable.

	* src/chimera/core/eventsproxy.py: Remove unreachable handlers
	when publishing.

	* src/chimera/core/eventwrapper.py: NameError fix.

	* src/chimera/core/constants.py: Lock and reflection constants
	added.

2008-03-12  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/core/lock.py:
	* src/chimera/core/lockwrapper.py:
	* src/chimera/core/test/test_locks: New files to add support for
	coarse-grained automatic locks (much like synchronized methods in
	Java).

	* src/chimera/core/metaobject.py: Add lock support and use
	constants to hide hard-coded values.

2008-03-10  P. Henrique Silva  <henrique@astro.ufsc.br>

	* scripts/chimera: Fix changes on Site controller.
	* scripts/chimera-cam: Ported to new infrastructure and improved.
	* scripts/chimera-console: Ported but not working yet.

	* scripts/chimera-focus:
	* scripts/chimera-tel:
	* scripts/chimera-dome: New scripts.

2008-02-06  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/core/log.py: Better log formatting with separate
	logger for console and file.

	New function to set Console log level.

	Logging of exceptions using printException facility using custom
	formatter.

	* src/chimera/core/tests/test_log.py: Simple test to confirm log
	capabilities.

2008-01-07  P. Henrique Silva  <henrique@astro.ufsc.br>

	* tests/run-pychecker.sh
	* tests/run-pylint.sh
	* tests/run-tests.sh: Updated runners.

	* TODO
	* TODO.SPRINTS
	* TODO.DONE: Updated TODO's.
